--- a/index.Rmd
+++ b/index.Rmd
@@ -23,3 +23,4 @@
 6. [Tasty Hand Pulled Noddles](http://www.tastyhandpullednoodlesnyc.com/): Chinees Noodles
 7. [Barney Greengrass](http://barneygreengrass.com/): Bagels and Lox
 8. [Momofuku Noodle Bar](https://noodlebar-ny.momofuku.com/): Celebrity Chefs... Why not.
+9. [Pier A Harbor House](http://www.piera.com/): My office mate's brothers favorite spot.
