added soba and korean

--- a/index.Rmd
+++ b/index.Rmd
@@ -24,3 +24,5 @@
 7. [Barney Greengrass](http://barneygreengrass.com/): Bagels and Lox
 8. [Momofuku Noodle Bar](https://noodlebar-ny.momofuku.com/): Celebrity Chefs... Why not.
 9. [Pier A Harbor House](http://www.piera.com/): My office mate's brothers favorite spot.
+10. [Cho Dong Gol](http://www.cdgnyc.com/): Korean
+11. [Soba Nippon](http://www.restaurantnippon.com/):Soba!
