--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,7 @@
 6. [Radegast Hall and Biergarten](http://www.radegasthall.com/): Beer, Sausage, Brookly.  Day drinking?!
 7. [The Cannibal](http://www.cannibalnyc.com/): Beer and Butcher
 8. [Redd's](http://www.yelp.com/biz/redds-brooklyn): Darts in Williamsburg
+9. [Jimmys No. 43](http://jimmysno43.com/): German/Belgian selection.  In East village.
 
 # Sites
 1. [The High Line](http://www.thehighline.org/)
